--- a/cvl_bachelor_thesis.tex
+++ b/cvl_bachelor_thesis.tex
@@ -35,10 +35,6 @@
 \definecolor{delim}{RGB}{20,105,176}
 \colorlet{numb}{magenta!60!black}
 
-
-
-
-
 \lstdefinelanguage{json}{
     numbers=left,
     numberstyle=\scriptsize,
@@ -102,6 +98,27 @@
 \def\Rd#1{\textcolor{krachblau}{{\sout{#1}}}} % deleted
 \def\Gd#1{\textcolor{Green}{{\sout{#1}}}} % deleted
 %\def\lorem#1{\textcolor{lightgray}{\emph{#1}}} % deleted
+
+
+\lstdefinelanguage{JavaScript}{
+  keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+  keywordstyle=\color{blue}\bfseries,
+  ndkeywords={class, export, boolean, throw, implements, import, this},
+  ndkeywordstyle=\color{darkgray}\bfseries,
+  identifierstyle=\color{black},
+  sensitive=false,
+  comment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  commentstyle=\color{purple}\ttfamily,
+  stringstyle=\color{red}\ttfamily,
+  morestring=[b]',
+  numbers=left,
+  numberstyle=\scriptsize,
+  stepnumber=1,
+  showstringspaces=false,
+  breaklines=true,
+  frame=lines,
+}
 
 % ------------------------------------------------
 %	How to make LaTeX copy & paste -able for WORD (final spell checking):
