Kapitel1: Änderungsvorschläge überarbeitet

--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -26,6 +26,21 @@
   timestamp = {2008.06.13}
 }
 
+@OTHER{java_risks_cisico,
+  author = {Cisco Systems, Inc.},
+  title = {Java Security Best Practices},
+  howpublished = {\url{http://www.cisco.com/web/about/security/intelligence/2013/java_wp.html}},
+  timestamp = {2014.09.29}
+}
+
+@OTHER{java_risks_bmi,
+  author = {Bundesamt für Sicherheit in der Informationstechnik},
+  title = {Gefahren und Risiken im Zusammenhang mit Java-Applets},
+  howpublished = {\url{https://www.bsi.bund.de/DE/Themen/Cyber-Sicherheit/Themen/Sicherheitsvorfaelle/AktiveInhalte/definitionen/appletsgefahren.html}},
+  timestamp = {2014.09.29}
+}
+
+
 @OTHER{html,
   author = {W3C},
   title = {W3C Candidate Recommendation},
@@ -110,6 +125,16 @@
   howpublished = {\url{https://www.khronos.org/registry/webgl/specs/latest/2.0/}},
   timestamp = {2014.08.25}
 }
+
+@OTHER{opengl-es-sepc,
+  author = {Khronos Group},
+  title = {OpenGL ES 3.1 Specifications and Documentation},
+  year = {2014},
+  month = {June},
+  howpublished = {\url{http://www.khronos.org/registry/gles/specs/3.1/es_spec_3.1.pdf}},
+  timestamp = {2014.08.25}
+}
+
 
 
 @OTHER{flash-14,
