Kapitel2: Fehler korrigiert

--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -229,7 +229,7 @@ Für diese Berechnung wurde ein Ansatz auf Basis von JavaScript durch die Canvas
 Für die Ausgabe im Browser wird ein HTML5 Canvas Element verwendet,
 auf welches über ein sogenanten Grafikkontext zugegriffen werden kann. 
 Dieser Grafikkontext wird in JavaScript vom Browser als Objekt zur Verfügung gestellt.
-Durch das Kontext Objekt kann der Bildinhalt in ein Array und umgekehrt auch ein Array von Farbwerten in das Bild geschrieben werden.
+Durch das Kontext-Objekt kann der Bildinhalt in ein Array und umgekehrt auch ein Array von Farbwerten in das Bild geschrieben werden.
 Dabei wird das Bild zeilenweise in ein eindimensionales Array Serialisiert, 
 wo jeder Bildpunkt auf 4 Speicherstellen mit einem Integer-Wert zwischen 0 und 255 abgebildet wird.
 Die ersten drei Speicherstellen bilden den Farbwert durch die Anteile von Rot, Grün, Blau und die vierte den Alpha Kanal.
